--- a/Web dev/Projects/coffee club pro/about.html
+++ b/Web dev/Projects/coffee club pro/about.html
@@ -49,7 +49,11 @@
 
       <div class="para">
         <h2 style="margin-bottom: 30px;"><b>Welcome to Coffee Club</b></h2>
-        <p><strong>Coffee club</strong> is an alumni group formed by students and teachers of <strong>VVS Sardar Patel PU College</strong>. We conduct events, activities and discussions. Distinguished speakers from diiferent fields are invited to give talks and lectures. Many fun games and activities are conducted. The community also provides exposure to some brilliant minds of our college and to get to learn from them, many of them doing their specialization in different fields like engineering, medicine, arts and many more.</p>
+        <p>This is a small group of students interested in doing something more than regular academics and yes, the usual get togethers of old friends. There the idea of <strong>COFFEE CLUB</strong> came up, wherein we meet people from different fields, share their experiences, thoughts, knowledge and learn something from their lives and if possible inculcate them in our lives as well. This happens on one SUNDAY, EVERY MONTH. We are happy to say we have completed 7 years and looking forward to future more years.</p>
+
+        <p>It's just doesn't stop here, we have thoughts of spreading our little knowledge, ideas to the future lives at our best.</p>
+
+        <p>So, if possible join hands with us and let's do something better than what we were doing today and may be become better persons than what we were yesterday...</p>
     </div>
 
      
