--- a/Web dev/Projects/coffee club pro/index.html
+++ b/Web dev/Projects/coffee club pro/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #212529;">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="/logo.jpg" alt="" width="39" height="37">
+                <img src="/final logo.png" alt="" width="65" height="37">
               </a>
           <a class="navbar-brand text-white" href="#" style="font-family:'Times New Roman', Times, serif; font-size: 26px;">Coffee Club</a>
           <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
